cabal-version:      3.0
name:               cabal-nix-question
version:            0.1.0.0
license:            NONE
author:             Fernando Ayats
maintainer:         ayatsfer@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable cabal-nix-question
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , co-log
    hs-source-dirs:   app
    default-language: Haskell2010
